<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="카테고리">
        <menu>
            <item
                android:id="@+id/category1"
                android:checked="true"
                android:icon="@drawable/setting"
                android:title="@string/category1" />
            <item
                android:id="@+id/category2"
                android:icon="@drawable/setting"
                android:title="@string/category2" />
            <item
                android:id="@+id/category3"
                android:icon="@drawable/setting"
                android:title="@string/category3" />
            <item
                android:id="@+id/category"
                android:icon="@drawable/setting"
                android:title="@string/category4" />
        </menu>
    </item>

    <item android:title="@string/cart">
        <menu>
            <item
                android:icon="@drawable/setting"
                android:id="@+id/nav_sub_menu_item01"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/setting"
                android:id="@+id/nav_sub_menu_item02"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>

</menu>
